--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ body{
     padding: 26px;
     width: 613px;
     border-radius: 8px 0 0 8px;
+    color: var(--branco);
 }
 
 .container-pesquisa,
@@ -46,6 +47,10 @@ body{
     background-color: #ffffff21;
     border: none;
     margin-bottom: 30px;
+}
+
+.container-pesquisa-icone:hover{
+    background-color: #ffffff60;
 }
 
 .container-pesquisa-icone{
@@ -114,4 +119,9 @@ body{
     color: var(--cinza);
     margin: 64px 38px 38px 0;
     
+}
+
+.img-coracao{
+    background-color: transparent;
+    border: none;
 }
