--- a/style.css
+++ b/style.css
@@ -125,3 +125,107 @@ body{
     background-color: transparent;
     border: none;
 }
+
+@media only screen and (max-width: 1000px){
+    .container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .container-titulo{
+        padding-bottom: 24px;
+    }
+
+    .container-pesquisa{
+        width: 300px;
+        padding: 14px;
+    }
+
+    .filme{
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        margin: 50px;
+    }
+
+    .filme__texto{
+        margin: 0;
+        padding-top: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .avaliacao-paragrafo{
+        padding-right: 10px;
+    }
+
+    .filme__imagem{
+        padding: 20px;
+    }
+
+    .filme__sinopse{
+        padding: 20px;
+        margin: 0;
+        font-size: 14px;
+        text-align: justify;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+
+    .container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .container-titulo{
+        font-size: 24px;
+        padding-bottom: 24px;
+    }
+
+    .container-pesquisa{
+        width: 300px;
+        padding: 14px;
+        font-size: 12px;
+    }
+
+    .container-checkbox-label{
+        font-size: 14px
+    }
+
+    .filme,
+    .filme__texto{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .filme{
+        margin: 50px;
+    }
+
+    .filme__texto{
+        margin: 0;
+        font-size: 14px;
+    }
+    .avaliacao-paragrafo{
+        padding-right: 10px;
+    }
+
+    .filme__imagem{
+        padding: 20px;
+    }
+
+    .filme__sinopse{
+        padding: 20px;
+        margin: 0;
+        text-align: justify;
+    }
+}
+
